[package]
name = "env-variable-secrets-scanner-policy"
version = "0.1.6"
authors = ["raulcabello <raul.cabello@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.17.0", default_features = false, features = ["v1_24"] }
kubewarden-policy-sdk = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding = "0.2.33"
base64 = "0.21.0"
rusty_hog_scanner = { git = "https://github.com/newrelic/rusty-hog/", rev = "0a5c56ef546093d78fbc824b80fd82999c9af4c0" }
