[package]
name = "env-variable-secrets-scanner-policy"
version = "1.0.8"
authors = ["raulcabello <raul.cabello@suse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.26.0", default-features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding = "0.2.33"
base64 = "0.22.0"
rusty_hog_scanner = { git = "https://github.com/newrelic/rusty-hog/", rev = "d65f94bd6b18324b089e9b1dcb63e9a5cc00307e" }
